--- a/lesson1.ipynb
+++ b/lesson1.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOEA38JnQD4fg6mpCJHrZf7",
+      "authorship_tag": "ABX9TyNhS2DOzOAbHYzLOyVTnU6e",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -62,6 +62,76 @@
       "source": [
         "print(\"Hello!python!\")"
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "99**99"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "rypvtHW2QPHJ",
+        "outputId": "15965747-e1b9-4180-8f20-9088f409b300"
+      },
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "369729637649726772657187905628805440595668764281741102430259972423552570455277523421410650010128232727940978889548326540119429996769494359451621570193644014418071060667659301384999779999159200499899"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 2
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(5+5)\n",
+        "print(90-10)\n",
+        "print(4*7)\n",
+        "print(7/2)\n",
+        "print(7//2)\n",
+        "print(7%3)\n",
+        "print(3**4)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "2ZuubguFRHqf",
+        "outputId": "8c8d2403-eaec-433a-f0ae-3d3db234ed31"
+      },
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "10\n",
+            "80\n",
+            "28\n",
+            "3.5\n",
+            "3\n",
+            "1\n",
+            "81\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "yP18Ca4sRdhT"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
