--- a/lesson2_1_1.ipynb
+++ b/lesson2_1_1.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyO0+Upt+EH26vM1u1cp1ZCU",
+      "authorship_tag": "ABX9TyO9fJsXYAtZM4XZA13vyMpt",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,12 +28,112 @@
     },
     {
       "cell_type": "code",
+      "source": [
+        "2+3*4"
+      ],
+      "metadata": {
+        "id": "n62-N_xVq2EQ",
+        "outputId": "796e7ca6-0896-410a-9aa9-5e8813119a08",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "14"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 1
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "(2+3)*4"
+      ],
+      "metadata": {
+        "id": "7XqcSdKdrt_e",
+        "outputId": "ee757545-ebcc-429c-fa16-7b8140ab8a8f",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "20"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 2
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "-會做6件事\n",
+        "-運算式->>會傳出值\n",
+        "運算式的優先順序\n",
+        "*   ()\n",
+        "*   **\n",
+        "*   */%//\n",
+        "*   +-\n",
+        "*   =\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "Eq94TOD8tJAH"
+      }
+    },
+    {
+      "cell_type": "code",
       "execution_count": null,
       "metadata": {
         "id": "KL3VjYMnpD6U"
       },
       "outputs": [],
       "source": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "2*(1+2)**2-2**2*2"
+      ],
+      "metadata": {
+        "id": "WLmi35EIq1-t",
+        "outputId": "c494688e-ce3c-4c0e-805e-b86206866849",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "10"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 3
+        }
+      ]
     }
   ]
 }
