--- a/lesson2_1_1.ipynb
+++ b/lesson2_1_1.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPU/1DODcd1qqLZwxRnwey8",
+      "authorship_tag": "ABX9TyOVTx6SE18t1vwbhpnE0cOx",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -86,7 +86,7 @@
         "#運算式->>會傳出值\n",
         "#運算式的優先順序\n",
         "* ()\n",
-        "* 2.**\n",
+        "* **\n",
         "* */%//\n",
         "* +-\n",
         "* =\n",
@@ -113,16 +113,18 @@
     {
       "cell_type": "code",
       "source": [
-        "2*(1+2)**2-2**2*2"
+        "2*(1+2)**2-2**2*2\n",
+        "\n",
+        "5*2"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "WLmi35EIq1-t",
-        "outputId": "c494688e-ce3c-4c0e-805e-b86206866849"
+        "outputId": "36209723-3f6b-4aee-ff8c-ccdd5049bce5"
       },
-      "execution_count": 3,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -132,7 +134,44 @@
             ]
           },
           "metadata": {},
-          "execution_count": 3
+          "execution_count": 4
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "###敘述式"
+      ],
+      "metadata": {
+        "id": "iGkfwRHMx3W7"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "n=2*(1+2)**2-2**2*2\n",
+        "\n",
+        "n*10"
+      ],
+      "metadata": {
+        "id": "eWdcsmElxFng",
+        "outputId": "c3a724cc-b6d3-4c2c-c45f-1c99f8387d44",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "100"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 6
         }
       ]
     }
