--- a/lesson2_1_1.ipynb
+++ b/lesson2_1_1.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOVTx6SE18t1vwbhpnE0cOx",
+      "authorship_tag": "ABX9TyPjy3F6b+ZBj595dk4wB/G0",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -141,7 +141,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "###敘述式"
+        "###敘述式(Satement)"
       ],
       "metadata": {
         "id": "iGkfwRHMx3W7"
@@ -152,16 +152,18 @@
       "source": [
         "n=2*(1+2)**2-2**2*2\n",
         "\n",
-        "n*10"
+        "n=n*10\n",
+        "\n",
+        "n"
       ],
       "metadata": {
-        "id": "eWdcsmElxFng",
-        "outputId": "c3a724cc-b6d3-4c2c-c45f-1c99f8387d44",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "eWdcsmElxFng",
+        "outputId": "a078002d-7693-46e9-8786-5a8f73eb272b"
       },
-      "execution_count": 6,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -171,7 +173,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 6
+          "execution_count": 8
         }
       ]
     }
