--- a/lesson2_1_1.ipynb
+++ b/lesson2_1_1.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyM6P8me76rw0vv+MAPuq29d",
+      "authorship_tag": "ABX9TyOlIwokxrM5+uWeN03Llcgm",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -174,6 +174,45 @@
           },
           "metadata": {},
           "execution_count": 8
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "###(*=)複合指定運算子"
+      ],
+      "metadata": {
+        "id": "k-BZspnF1zNr"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "n=2*(1+2)**2-2**2*2\n",
+        "\n",
+        "n*=10\n",
+        "\n",
+        "n"
+      ],
+      "metadata": {
+        "id": "JYBnNov014W3",
+        "outputId": "27258895-025b-46bb-cb57-9c8d1410c094",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "100"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 9
         }
       ]
     }
