--- a/lesson2_1_1.ipynb
+++ b/lesson2_1_1.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOlIwokxrM5+uWeN03Llcgm",
+      "authorship_tag": "ABX9TyO6LXmeZNGEwySs1vgkxM5o",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -193,14 +193,14 @@
         "\n",
         "n*=10\n",
         "\n",
-        "n"
+        "print(n)"
       ],
       "metadata": {
-        "id": "JYBnNov014W3",
-        "outputId": "27258895-025b-46bb-cb57-9c8d1410c094",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "JYBnNov014W3",
+        "outputId": "27258895-025b-46bb-cb57-9c8d1410c094"
       },
       "execution_count": 9,
       "outputs": [
@@ -213,6 +213,52 @@
           },
           "metadata": {},
           "execution_count": 9
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### input()使用，字串可以用單引號 亦可用雙引號"
+      ],
+      "metadata": {
+        "id": "ygPz5-MG7efz"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "input(\"請輸入您的姓名：\")"
+      ],
+      "metadata": {
+        "id": "FZ8sIxod7dmJ",
+        "outputId": "69b466c1-eb67-43c4-cc1b-26025202e7d6",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 53
+        }
+      },
+      "execution_count": 10,
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "請輸入您的姓名：黃琪絜\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'黃琪絜'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 10
         }
       ]
     }
