--- a/lesson2_1_1.ipynb
+++ b/lesson2_1_1.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyO6LXmeZNGEwySs1vgkxM5o",
+      "authorship_tag": "ABX9TyOmAj/H5i00LoweMxe8GL9P",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -228,39 +228,36 @@
     {
       "cell_type": "code",
       "source": [
-        "input(\"請輸入您的姓名：\")"
+        "name = input(\"請輸入您的姓名：\")\n",
+        "print(\"您的名字\",name,\".\")\n"
       ],
       "metadata": {
-        "id": "FZ8sIxod7dmJ",
-        "outputId": "69b466c1-eb67-43c4-cc1b-26025202e7d6",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 53
-        }
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "FZ8sIxod7dmJ",
+        "outputId": "d688b224-11c5-4e4f-8be0-63239c335cf1"
       },
-      "execution_count": 10,
+      "execution_count": 14,
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
-            "請輸入您的姓名：黃琪絜\n"
+            "請輸入您的姓名：huang\n",
+            "您的名字 huang .\n"
           ]
-        },
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "'黃琪絜'"
-            ],
-            "application/vnd.google.colaboratory.intrinsic+json": {
-              "type": "string"
-            }
-          },
-          "metadata": {},
-          "execution_count": 10
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "DBZXkGYU8W3L"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
