--- a/lesson2_2.ipynb
+++ b/lesson2_2.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyO0+Upt+EH26vM1u1cp1ZCU",
+      "authorship_tag": "ABX9TyO42vITDC8Ul+WZTXw8U+OO",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -27,13 +27,124 @@
       ]
     },
     {
-      "cell_type": "code",
-      "execution_count": null,
+      "cell_type": "markdown",
+      "source": [],
       "metadata": {
-        "id": "TC8S1n5MFNHO"
+        "id": "mxDceeYqFxIx"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "只有數值型別可以數學運算"
+      ],
+      "metadata": {
+        "id": "pCCF6LyEFzUO"
+      }
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 5,
+      "metadata": {
+        "id": "TC8S1n5MFNHO",
+        "outputId": "c1a5c4df-cd00-44a6-b731-a2f3f8f2c2b7",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "10.0"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 5
+        }
+      ],
+      "source": [
+        "5+5\n",
+        "5.0+5.0\n",
+        "5+5.0"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "###數值和字串無法數學運算"
+      ],
+      "metadata": {
+        "id": "UE_lhJeOGPIV"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "5+\"5\""
+      ],
+      "metadata": {
+        "id": "4G_Fj0pWGUBH",
+        "outputId": "9eb21668-4a21-4549-fa40-d0ea961f98b8",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 141
+        }
+      },
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "TypeError",
+          "evalue": "unsupported operand type(s) for +: 'int' and 'str'",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-6-76085b026109>\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;36m5\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0;34m\"5\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;31mTypeError\u001b[0m: unsupported operand type(s) for +: 'int' and 'str'"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "###字串和字串可以相加"
+      ],
+      "metadata": {
+        "id": "mnC-31M6GnX1"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "\"5\"+\"5\""
+      ],
+      "metadata": {
+        "id": "ToHqgPTSGq2R",
+        "outputId": "e8d2263f-6af3-4372-c41d-8c4fe3ee34a5",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        }
+      },
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'55'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 7
+        }
+      ]
     }
   ]
 }
