--- a/lesson2_2.ipynb
+++ b/lesson2_2.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyO42vITDC8Ul+WZTXw8U+OO",
+      "authorship_tag": "ABX9TyN4y3WTjo6gAk098Y7nyaJn",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -47,10 +47,10 @@
       "execution_count": 5,
       "metadata": {
         "id": "TC8S1n5MFNHO",
-        "outputId": "c1a5c4df-cd00-44a6-b731-a2f3f8f2c2b7",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "c1a5c4df-cd00-44a6-b731-a2f3f8f2c2b7"
       },
       "outputs": [
         {
@@ -85,12 +85,12 @@
         "5+\"5\""
       ],
       "metadata": {
-        "id": "4G_Fj0pWGUBH",
-        "outputId": "9eb21668-4a21-4549-fa40-d0ea961f98b8",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 141
-        }
+        },
+        "id": "4G_Fj0pWGUBH",
+        "outputId": "9eb21668-4a21-4549-fa40-d0ea961f98b8"
       },
       "execution_count": 6,
       "outputs": [
@@ -110,7 +110,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "###字串和字串可以相加"
+        "###字串和字串可以相加，相乘"
       ],
       "metadata": {
         "id": "mnC-31M6GnX1"
@@ -119,32 +119,105 @@
     {
       "cell_type": "code",
       "source": [
-        "\"5\"+\"5\""
+        "\"5\"+\"5\"\n",
+        "\"=\"*10"
       ],
       "metadata": {
-        "id": "ToHqgPTSGq2R",
-        "outputId": "e8d2263f-6af3-4372-c41d-8c4fe3ee34a5",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
-        }
+        },
+        "id": "ToHqgPTSGq2R",
+        "outputId": "a7766a58-eb34-4d20-f256-43df1f667748"
       },
-      "execution_count": 7,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "'55'"
+              "'=========='"
             ],
             "application/vnd.google.colaboratory.intrinsic+json": {
               "type": "string"
             }
           },
           "metadata": {},
-          "execution_count": 7
+          "execution_count": 9
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "暫時轉換型別"
+      ],
+      "metadata": {
+        "id": "L8beeNh7HGjt"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "5+float(\"5\")"
+      ],
+      "metadata": {
+        "id": "VH7SSgd6G4y2",
+        "outputId": "9a2d1e1c-f2e5-4d13-ca46-88ad28f43776",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "10.0"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 11
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "width=float(input (\"請輸入矩型的寬：\"))\n",
+        "height=float(input (\"請輸入矩形的高：\"))\n",
+        "area=width*height\n",
+        "print(\"矩形的面積為：\",area)"
+      ],
+      "metadata": {
+        "id": "xSLrnef7Hray",
+        "outputId": "3a1355f4-4bb2-4a41-9bff-c0585eed3e97",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "請輸入矩型的寬：5\n",
+            "請輸入矩形的高：4\n",
+            "矩形的面積為： 20.0\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "wlIzaDVFHyw-"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
