--- a/lesson2_2.ipynb
+++ b/lesson2_2.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyN4y3WTjo6gAk098Y7nyaJn",
+      "authorship_tag": "ABX9TyMCp2YxWmJlgwYpi3+ueddv",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -212,9 +212,41 @@
     },
     {
       "cell_type": "code",
+      "source": [
+        "import math\n",
+        "\n",
+        "math.ceil(45.1)\n",
+        "side=float(input(\"請輸入對邊:\"))\n",
+        "another_side=float(input(\"請輸入遴邊:\"))\n",
+        "answer=math.sqrt(side**2+another_side**2)\n",
+        "type(answer)\n",
+        "print(\"斜邊為：\",answer)\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "wlIzaDVFHyw-",
+        "outputId": "707b37b8-7762-4ff0-a311-9a27fa7927bd"
+      },
+      "execution_count": 19,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "請輸入對邊:20\n",
+            "請輸入遴邊:30\n",
+            "斜邊為： 36.05551275463989\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "wlIzaDVFHyw-"
+        "id": "uE-0QvM9MYAu"
       },
       "execution_count": null,
       "outputs": []
