--- a/lesson2_2.ipynb
+++ b/lesson2_2.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMCp2YxWmJlgwYpi3+ueddv",
+      "authorship_tag": "ABX9TyOV+3v2I+YneKjRDKpZMAvb",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -44,7 +44,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "metadata": {
         "id": "TC8S1n5MFNHO",
         "colab": {
@@ -92,7 +92,7 @@
         "id": "4G_Fj0pWGUBH",
         "outputId": "9eb21668-4a21-4549-fa40-d0ea961f98b8"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "error",
@@ -130,7 +130,7 @@
         "id": "ToHqgPTSGq2R",
         "outputId": "a7766a58-eb34-4d20-f256-43df1f667748"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -168,7 +168,7 @@
         "id": "VH7SSgd6G4y2",
         "outputId": "9a2d1e1c-f2e5-4d13-ca46-88ad28f43776"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -197,7 +197,7 @@
         "id": "xSLrnef7Hray",
         "outputId": "3a1355f4-4bb2-4a41-9bff-c0585eed3e97"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -229,7 +229,7 @@
         "id": "wlIzaDVFHyw-",
         "outputId": "707b37b8-7762-4ff0-a311-9a27fa7927bd"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -244,12 +244,70 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "#pythonh的條件事\n",
+        "##python的比較運算子"
+      ],
       "metadata": {
-        "id": "uE-0QvM9MYAu"
+        "id": "r0PA2GUS1cwh"
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [],
+      "metadata": {
+        "id": "6KFbbYce1oWi"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#pythonh的條件事\n",
+        "##python的比較運算子"
+      ],
+      "metadata": {
+        "id": "CxQfKW_w1rEt"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "5 == 5\n",
+        "5 != 5\n",
+        "5 is 5.0"
+      ],
+      "metadata": {
+        "id": "I-5-qsfk1qdr",
+        "outputId": "8e58f281-38f8-416e-f310-784668dde43a",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "<>:3: SyntaxWarning: \"is\" with a literal. Did you mean \"==\"?\n",
+            "<>:3: SyntaxWarning: \"is\" with a literal. Did you mean \"==\"?\n",
+            "<ipython-input-4-bf5c75657c14>:3: SyntaxWarning: \"is\" with a literal. Did you mean \"==\"?\n",
+            "  5 is 5.0\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "False"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 4
+        }
+      ]
     }
   ]
 }
