--- a/lesson3/lesson3_1.ipynb
+++ b/lesson3/lesson3_1.ipynb
@@ -96,6 +96,203 @@
           "execution_count": 5
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# python的條件式\n",
+        "## python的比較運算子\n",
+        "Python 的比較運算子用來比較兩個值，並回傳布林值（True 或 False）。Python 支援以下主要的比較運算子：\n",
+        "\n",
+        "- `<` ：小於\n",
+        "- `<=` ：小於等於\n",
+        "- `>` ：大於\n",
+        "- `>=` ：大於等於\n",
+        "- `==` ：等於\n",
+        "- `!=` ：不等於\n",
+        "- `is` ：判斷兩個物件是否為同一個物件（物件識別）\n",
+        "- `is not` ：判斷兩個物件是否不是同一個物件\n",
+        "- `>` : 小於"
+      ],
+      "metadata": {
+        "id": "TcSIeB6g5DsD"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# python條件式\n",
+        "- 單項式\n",
+        "- 雙項式\n",
+        "\n",
+        "請給我：\n",
+        "- 語法\n",
+        "- 說明\n",
+        "- 小範例\n",
+        "\n",
+        "請使用繁體中文"
+      ],
+      "metadata": {
+        "id": "xUQIl9jv5u81"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Python 條件式\n",
+        "\n",
+        "### **一、單項式（if 條件式）**\n",
+        "\n",
+        "#### 語法\n",
+        "```python\n",
+        "if 條件:\n",
+        "    程式區塊\n",
+        "```\n",
+        "\n",
+        "#### 說明\n",
+        "- 當「條件」成立（結果為 True）時，執行縮排的程式區塊。\n",
+        "- 若條件不成立，則跳過此程式區塊，繼續往下執行。\n",
+        "- 注意：程式區塊必須縮排（通常為四個空白）。\n",
+        "\n",
+        "#### 小範例\n",
+        "```python\n",
+        "age = 20\n",
+        "if age >= 18:\n",
+        "    print(\"可以喝酒\")\n",
+        "```\n",
+        "執行結果：\n",
+        "```\n",
+        "可以喝酒\n",
+        "```\n",
+        "如果 `age` 小於 18，則不會輸出任何內容。[4][5][6]\n",
+        "\n",
+        "---\n",
+        "\n",
+        "### **二、雙項式（if-else 條件式）**\n",
+        "\n",
+        "#### 語法\n",
+        "```python\n",
+        "if 條件:\n",
+        "    程式區塊1\n",
+        "else:\n",
+        "    程式區塊2\n",
+        "```\n",
+        "\n",
+        "#### 說明\n",
+        "- 當「條件」成立時，執行 `程式區塊1`。\n",
+        "- 當「條件」不成立時，執行 `程式區塊2`。\n",
+        "- 依然要注意縮排。\n",
+        "\n",
+        "#### 小範例\n",
+        "```python\n",
+        "age = 17\n",
+        "if age >= 18:\n",
+        "    print(\"可以喝酒\")\n",
+        "else:\n",
+        "    print(\"只能喝水\")\n",
+        "```\n",
+        "執行結果：\n",
+        "```\n",
+        "只能喝水\n",
+        "```\n",
+        "如果 `age` 大於等於 18，則輸出「可以喝酒」；否則輸出「只能喝水」。[4][5][6]\n",
+        "\n",
+        "---\n",
+        "\n",
+        "### **補充：多項式（if-elif-else 條件式）**\n",
+        "\n",
+        "#### 語法\n",
+        "```python\n",
+        "if 條件1:\n",
+        "    程式區塊1\n",
+        "elif 條件2:\n",
+        "    程式區塊2\n",
+        "else:\n",
+        "    程式區塊3\n",
+        "```\n",
+        "\n",
+        "#### 小範例\n",
+        "```python\n",
+        "score = 85\n",
+        "if score >= 90:\n",
+        "    print(\"成績：A\")\n",
+        "elif score >= 80:\n",
+        "    print(\"成績：B+\")\n",
+        "else:\n",
+        "    print(\"成績：C\")\n",
+        "```\n",
+        "執行結果：\n",
+        "```\n",
+        "成績：B+\n",
+        "```\n",
+        "這種寫法適合有多個條件分支的情況。[6]\n",
+        "\n",
+        "---\n",
+        "\n",
+        "### **注意事項**\n",
+        "- 條件式的判斷通常會用比較運算子（如：==、!=、>、=、<=）。\n",
+        "- 程式區塊必須正確縮排，否則會發生語法錯誤。[4][5]\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "VTatJS7v6bmV"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#雙向選擇\n",
+        "scores = 65\n",
+        "if scores >= 60:\n",
+        "  print('及格')\n",
+        "else:\n",
+        "  print('不及格')"
+      ],
+      "metadata": {
+        "id": "LEa7LJwb7Uli",
+        "outputId": "74bf8552-d79f-403d-c498-ad30495a60a8",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "及格\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#單向選擇\n",
+        "scores = 55\n",
+        "if scores < 60:\n",
+        "  print('不及格')\n",
+        "print(\"應用程式結束了\")"
+      ],
+      "metadata": {
+        "id": "NiSbdvwX7x_C",
+        "outputId": "a0449ff7-530e-4878-98db-3290e5de6a04",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "不及格\n",
+            "應用程式結束了\n"
+          ]
+        }
+      ]
     }
   ]
 }
