--- a/lesson3/lesson3_1.ipynb
+++ b/lesson3/lesson3_1.ipynb
@@ -249,11 +249,11 @@
         "  print('不及格')"
       ],
       "metadata": {
-        "id": "LEa7LJwb7Uli",
-        "outputId": "74bf8552-d79f-403d-c498-ad30495a60a8",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "LEa7LJwb7Uli",
+        "outputId": "74bf8552-d79f-403d-c498-ad30495a60a8"
       },
       "execution_count": 6,
       "outputs": [
@@ -270,19 +270,19 @@
       "cell_type": "code",
       "source": [
         "#單向選擇\n",
-        "scores = 55\n",
+        "scores = 25\n",
         "if scores < 60:\n",
         "  print('不及格')\n",
         "print(\"應用程式結束了\")"
       ],
       "metadata": {
-        "id": "NiSbdvwX7x_C",
-        "outputId": "a0449ff7-530e-4878-98db-3290e5de6a04",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "NiSbdvwX7x_C",
+        "outputId": "3be33f7f-3037-47d6-b0ec-a8105ab6fb84"
       },
-      "execution_count": 4,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
@@ -290,6 +290,103 @@
           "text": [
             "不及格\n",
             "應用程式結束了\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# python的多項選擇說明\n",
+        "- 語法\n",
+        "- 小範"
+      ],
+      "metadata": {
+        "id": "iFblSzS49FFY"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# python的多項選擇說明\n",
+        "- 語法\n",
+        "- 小範\n",
+        "- 繁體中文回覆\n",
+        "\n",
+        "\n",
+        "if 條件式1:\n",
+        "    程式區塊1\n",
+        "elif 條件式2:\n",
+        "    程式區塊2\n",
+        "elif 條件式3:\n",
+        "    程式區塊3\n",
+        "...\n",
+        "else:\n",
+        "    程式區塊n\n"
+      ],
+      "metadata": {
+        "id": "2WBkf2OJ9Phu"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#巢狀判斷\n",
+        "scores = 59.5\n",
+        "if scores >= 80:\n",
+        "  print(\"優\")\n",
+        "else:\n",
+        " if scores >= 60:\n",
+        "  print(\"甲\")\n",
+        " else:\n",
+        "  print(\"不及格\")"
+      ],
+      "metadata": {
+        "id": "tQ_e802b_kYE",
+        "outputId": "e46e31e0-2575-496f-9ae8-d428741d1874",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "不及格\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#多項選擇結構\n",
+        "scores = 35\n",
+        "if scores >= 80:\n",
+        "  print(\"優\")\n",
+        "elif scores >= 60:\n",
+        "  print(\"甲\")\n",
+        "else:\n",
+        "  print(\"不及格\")"
+      ],
+      "metadata": {
+        "id": "qZABKFocBmjy",
+        "outputId": "1ceb8f71-d118-4f84-cc3a-e1faa021993d",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 18,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "不及格\n"
           ]
         }
       ]
