--- a/lesson3/lesson3_1.ipynb
+++ b/lesson3/lesson3_1.ipynb
@@ -315,13 +315,13 @@
         "- 小範\n",
         "- 繁體中文回覆\n",
         "\n",
-        "\n",
-        "if 條件式1:\n",
-        "    程式區塊1\n",
-        "elif 條件式2:\n",
-        "    程式區塊2\n",
-        "elif 條件式3:\n",
-        "    程式區塊3\n",
+        "  $   \n",
+        "if 條件式1:   \n",
+        "    程式區塊1   \n",
+        "elif 條件式2:   \n",
+        "    程式區塊2   \n",
+        "elif 條件式3:   \n",
+        "    程式區塊3   \n",
         "...\n",
         "else:\n",
         "    程式區塊n\n"
@@ -344,11 +344,11 @@
         "  print(\"不及格\")"
       ],
       "metadata": {
-        "id": "tQ_e802b_kYE",
-        "outputId": "e46e31e0-2575-496f-9ae8-d428741d1874",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "tQ_e802b_kYE",
+        "outputId": "e46e31e0-2575-496f-9ae8-d428741d1874"
       },
       "execution_count": 12,
       "outputs": [
@@ -374,11 +374,11 @@
         "  print(\"不及格\")"
       ],
       "metadata": {
-        "id": "qZABKFocBmjy",
-        "outputId": "1ceb8f71-d118-4f84-cc3a-e1faa021993d",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "qZABKFocBmjy",
+        "outputId": "1ceb8f71-d118-4f84-cc3a-e1faa021993d"
       },
       "execution_count": 18,
       "outputs": [
@@ -390,6 +390,48 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "scores = 58\n",
+        "if scores < 60:\n",
+        "  print(\"不及格\")\n",
+        "elif scores < 70:\n",
+        "  print(\"丙\")\n",
+        "elif scores < 80:\n",
+        "  print(\"乙\")\n",
+        "elif scores < 90:\n",
+        "  print(\"甲\")\n",
+        "else:\n",
+        "  print(\"優\")\n"
+      ],
+      "metadata": {
+        "id": "RtSW2PzuGbMH",
+        "outputId": "6561da7a-2bf1-4245-8729-96193e581adc",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 24,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "不及格\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "rJLTrureGv4p"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
