--- a/lesson3_2.ipynb
+++ b/lesson3_2.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyO0+Upt+EH26vM1u1cp1ZCU",
+      "authorship_tag": "ABX9TyMFypFtc3IOmaxyVr4UiP20",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -34,6 +34,66 @@
       },
       "outputs": [],
       "source": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "1"
+      ],
+      "metadata": {
+        "id": "X6DwOvLJKyoN"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "presure = 92\n",
+        "if presure >= 80:\n",
+        "  if presure <= 120:\n",
+        "    print(\"血壓正常\")"
+      ],
+      "metadata": {
+        "id": "KIU39qwuMBts",
+        "outputId": "3f2bc9af-112a-4db4-fed8-3370c70fa6fc",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "血壓正常\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "presure = 92\n",
+        "if presure >= 80 and presure <= 120:\n",
+        "  print(\"血壓正常\")"
+      ],
+      "metadata": {
+        "id": "zC8K2Hm3MNlc",
+        "outputId": "1597b5cc-06a4-4c19-9876-befc0fb6d94f",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "血壓正常\n"
+          ]
+        }
+      ]
     }
   ]
 }
