--- a/lesson4_1.ipynb
+++ b/lesson4_1.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyO0+Upt+EH26vM1u1cp1ZCU",
+      "authorship_tag": "ABX9TyN/bsXefZElgig0UTy1XliO",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -34,6 +34,46 @@
       },
       "outputs": [],
       "source": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "range (10)"
+      ],
+      "metadata": {
+        "id": "hD6nCcuwtUx7"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#list\n",
+        "for i in [45, 92, 78, 50, 69]:\n",
+        "  print(i)"
+      ],
+      "metadata": {
+        "id": "Q4H2UScAujaD",
+        "outputId": "19496483-6106-43bd-9ce9-bcce57599576",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "45\n",
+            "92\n",
+            "78\n",
+            "50\n",
+            "69\n"
+          ]
+        }
+      ]
     }
   ]
 }
